Added StreamApiTrainingDemo.java for extra training